2005-08-25  Philippe Gerum  <rpm@xenomai.org>

	* nucleus/module.c (sched_seq_open, stat_seq_open): Make sure that
	the nklock is being held for the shortest possible time, so that
	dumping the associated /proc files with lots of entries won't
	cause massive jittery.

2005-08-24  Jim Cromie <jcromie@divsol.com>

	* scripts/rtai-test.in: Extend with pre & post load-tests.

2005-08-23  Dmitry Adamushko  <dmitry.adamushko@gmail.com>

	* skins/rtai/registry.c (rt_registry_bind): Allow unblockable
	contexts to try-and-fail binding to a non-registered object,
	instead of always bail out on -EPERM error.

2005-08-22  Philippe Gerum  <rpm@xenomai.org>

	* skins/rtdm: Merge RTDM patch level #10 and #11.

2005-08-22  Dmitry Adamushko  <dmitry.adamushko@gmail.com>

	* skins/rtdm/proc (proc_read_open_fildes): Don't uselessly copy
	the fildes struct while iterating.

2005-08-21  Philippe Gerum  <rpm@xenomai.org>

	* configure.in: Display kernel EXTRAVERSION.

	* skins/rtdm: Merge RTDM patch level #9.

	* CREDITS: Add.

	* arch/ppc/patches: Upgrade to Adeos/ppc r8c2.

2005-08-21  Gilles Chanteperdrix  <gilles.chanteperdrix@laposte.net>

	* nucleus/pod.c (xnpod_schedule, xnpod_schedule_runnable): Avoid
	calling xnpod_current_sched after each context switch.

2005-08-20  Philippe Gerum  <rpm@xenomai.org>

	* arch/i386/patches: Upgrade to r13c1.

	* scripts/rtai-config.in: Add --symbol-dir.

	* include/nucleus/asm-i386/syscall.h: Simplify the configuration
	by removing the adaptive VSYSCALL support: this made little sense,
	since RT users will/must know which capabilities their respective
	targets have. Replace all the hairy VSYSCALL-related switches by a
	single SEP-related one: i.e., either one activates SEP and has
	NPTL, or disables them. No middle choice anymore.

	* skins/posix/syscall.c: Set __pthread_setschedparam as
	conforming.

	* fusion: Following Jan's proposal, export module symbols to a
	central repository, and get rid of the former ugly hack